@@ -784,17 +784,18 @@ typedef struct
 
 } pdf_t;
 
-typedef struct
+typedef struct wpa
 {
-  u32 pke[25];
-  u32 eapol[64];
-  int eapol_size;
-  int keyver;
-  u8  orig_mac1[6];
-  u8  orig_mac2[6];
-  u8  orig_nonce1[32];
-  u8  orig_nonce2[32];
-  int essid_reuse;
+  u32  pke[25];
+  u32  eapol[64];
+  u16  eapol_len;
+  u8   authenticated;
+  u8   keyver;
+  u8   orig_mac_ap[6];
+  u8   orig_mac_sta[6];
+  u8   orig_nonce_ap[32];
+  u8   orig_nonce_sta[32];
+  int  essid_reuse;
 
 } wpa_t;
 
