@@ -433,8 +433,8 @@ typedef enum parser_rc
   PARSER_SALT_ITERATION      = -8,
   PARSER_SEPARATOR_UNMATCHED = -9,
   PARSER_SIGNATURE_UNMATCHED = -10,
-  PARSER_HCCAP_FILE_SIZE     = -11,
-  PARSER_HCCAP_EAPOL_SIZE    = -12,
+  PARSER_HCCAPX_FILE_SIZE    = -11,
+  PARSER_HCCAPX_EAPOL_LEN    = -12,
   PARSER_PSAFE2_FILE_SIZE    = -13,
   PARSER_PSAFE3_FILE_SIZE    = -14,
   PARSER_TC_FILE_SIZE        = -15,
@@ -453,6 +453,8 @@ typedef enum parser_rc
   PARSER_LUKS_KEY_DISABLED   = -28,
   PARSER_LUKS_KEY_STRIPES    = -29,
   PARSER_LUKS_HASH_CIPHER    = -30,
+  PARSER_HCCAPX_SIGNATURE    = -31,
+  PARSER_HCCAPX_VERSION      = -32,
   PARSER_UNKNOWN_ERROR       = -255
 
 } parser_rc_t;
